# django_find_dev

./: README.md  pyproject.toml  requirements.txt
find_dev/api/: serializers.py  urls.py  views.py
find_dev/backend/: settings.py  urls.py
find_dev/core/: models.py  validators.py
find_dev/projects/: apps.py  forms.py  models.py  urls.py  views.py
find_dev/projects/migrations/: 0001_initial.py
find_dev/static/css/: app.css
find_dev/static/js/: main.js
find_dev/static/uikit/styles/modules/: _variables.css
find_dev/templates/: delete_template.html  main.html  navbar.html  pagination.html
find_dev/templates/projects/: project.html  project_form.html  projects.html
find_dev/templates/users/: account.html  inbox.html  login_register.html  message.html  message_form.html  profile_form.html  profiles.html  reset_password.html  reset_password_complete.html  reset_password_confirm.html  reset_password_sent.html  skill_form.html  user_profile.html
find_dev/users/: admin.py  apps.py  forms.py  models.py  signals.py  urls.py  views.py
find_dev/users/migrations/: 0001_initial.py
