[tool.poetry]
name = "django-find-dev"
version = "0.1.0"
description = ""
authors = ["rkjar <rkjar@yandex.ru>"]
readme = "README.md"
packages = [{include = "django_find_dev"}]

[tool.poetry.dependencies]
python = "^3.10"
django = "~3.2"
pillow = "^9.4.0"
whitenoise = "^6.3.0"
djangorestframework = "^3.14.0"
djangorestframework-simplejwt = "^5.2.2"
python-dotenv = "^1.0.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
